fix loading align center

--- a/client/src/features/Hotel/pages/Booking/components/StepThree/StepThree.scss
+++ b/client/src/features/Hotel/pages/Booking/components/StepThree/StepThree.scss
@@ -68,7 +68,7 @@
     }
 
     button svg {
-        vertical-align: top;
+        vertical-align: unset;
     }
 
     .confirm {
@@ -79,4 +79,5 @@
             text-decoration: underline;
         }
     }
+
 }
